--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <script src="https://kit.fontawesome.com/a8d2f03749.js" crossorigin="anonymous"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React Template</title>
+    <title>Spacr</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
