add meta tags to public files

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,10 @@
     <link rel="manifest" href="/site.webmanifest">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:title" content="Spacr" />
+    <meta property="og:description" content="Spacr is an image website designed with React / Redux and Express. Save your favorite save photos with Spacr!" />
+    <meta property="og:image" content="https://drive.google.com/uc?export=view&id=1R8b9mwkXVGAsR1wP_TlqeyouhuGGXkZA" />
+    <meta property="og:url" content="https://spacr-aa.herokuapp.com/" />
     <meta name="theme-color" content="#000000" />
     <script src="https://kit.fontawesome.com/a8d2f03749.js" crossorigin="anonymous"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
